Fri Nov 08 10:47:41 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* tests/Abstract_Interface/Abstract_Interface_Server.dsp: Fixed
	  the broken release configuration.

Fri Nov 08 10:03:22 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* orbsvcs/orbsvcs/RTEventLog.dsp: Fixed the broken release build
	  configuration.

Thu Nov 07 12:21:21 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* TAOACE.dsw:
	* orbsvcs/Logging_Service/Basic_Logging_Service/Basic_Logging_Service.dsw:
	* orbsvcs/Logging_Service/Basic_Logging_Service/Logging_Service.dsp:
	* orbsvcs/Logging_Service/Event_Logging_Service/Event_Logging_Service.dsp:
	* orbsvcs/Logging_Service/Notify_Logging_Service/Notify_Logging_Service.dsp:
	* orbsvcs/Logging_Service/RTEvent_Logging_Service/RTEvent_Logging_Service.dsp:
	* orbsvcs/examples/Log/Basic/Client.dsp:
	* orbsvcs/examples/Log/Event/Log_CEC_Simple_Consumer.dsp:
	* orbsvcs/examples/Log/Event/Log_CEC_Simple_Supplier.dsp:
	* orbsvcs/examples/Log/Notify/Log_Notify_Simple_Consumer.dsp:
	* orbsvcs/examples/Log/Notify/Log_Notify_Simple_Supplier.dsp:
	* orbsvcs/examples/Log/RTEvent/Log_RTEvent_Simple_Consumer.dsp:
	* orbsvcs/examples/Log/RTEvent/Log_RTEvent_Simple_Supplier.dsp:
	* orbsvcs/orbsvcs/RTEventLog.dsp:
	* orbsvcs/tests/Log/Basic_Log_Test/Basic_Log_Test.dsp:
	* tests/IDL_Test/idl_test.dsp: Fixed broken workspaces and projects.

Thu Nov  7 12:03:18 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tao/Incoming_Mesage_Queue.cpp (duplicate): In duplicate () the
	  copy constructor should be called instead of the plain
	  constructor. Thanks tp Simon McQueen <sm@prismtechnologies.com>
	  for pointing this out.

Thu Nov  7 09:17:04 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* utils/nslist/nsadd.cpp: Fixed a compile error caused undeclared
	  variables.

Wed Nov  6 20:09:14 2002  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* utils/nslist/nsadd.cpp: Enhanced the utilty so that it can add